# llmux

./: .env.example  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  PRD.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-check.yml
docs/adr/: 0001-modular-monolith-topology.md  0002-provider-abstraction-pattern.md  README.md
openspec/: config.yaml
openspec/changes/archive/2026-07-23-core-gateway-mvp/: archive-report.md  design.md  tasks.md  verify-report.md
openspec/changes/archive/2026-07-23-core-gateway-mvp/specs/gateway-api-boundary/: spec.md
openspec/changes/archive/2026-07-23-core-gateway-mvp/specs/provider-abstraction/: spec.md
openspec/changes/core-gateway-mvp/: apply-progress.md  exploration.md  proposal.md  tasks.md
openspec/specs/gateway-api-boundary/: spec.md
openspec/specs/provider-abstraction/: spec.md
src/llmux/: config.py  main.py
src/llmux/api/: chat.py  health.py  models.py
src/llmux/core/providers/: base.py
src/llmux/observability/: tracing.py
tests/: conftest.py  test_unit_2.py
tests/core/: test_provider_protocol.py
